--- a/incident form.html
+++ b/incident form.html
@@ -94,11 +94,11 @@
 		</div>
 		<div>
 			<p><label for="yes_no_radio">Has immediate safety needs been met?</label>
-			<input type="radio" name="yes_no" checked>Yes</input>
-			<input type="radio" name="yes_no">No</input></p>
+			<input type="radio" name="yes_no_radio" id="yes1" checked><label for="yes1">Yes</label>
+			<input type="radio" name="yes_no_radio" id="no1"><label for="no1">No</label></p>
 			<p><label for="yes_no_radio2">Next of kin/guardian notified /patient ?</label>
-			<input type="radio" name="yes_no2" checked>Yes</input>
-			<input type="radio" name="yes_no2">No</input></p>
+			<input type="radio" name="yes_no_radio2" id="yes2" checked><label for="yes2">Yes</label>
+			<input type="radio" name="yes_no_radio2" id="no2"><label for="no2">No</label></p>
 		</div>
 		<div>
 			<p><label for="inj">Details of any injuries :</label></p>
