--- a/incident form.html
+++ b/incident form.html
@@ -10,11 +10,8 @@
 <body>
 <div>
 	<div>
-	<p><img src="logo_R3CCYY5763_20220104112138.png" alt="pim logo" width="200" height="200">
-	 
-	</p>
-	</div>
-	<h2>INCIDENT REPORTING FORM</h2>
+		<img src="incident.jpg" alt="pim logo"> 
+		</div>
 	<form action="" method="post">
 		<div>
 			<label for="inco">
