--- a/incidentFormgb.html
+++ b/incidentFormgb.html
@@ -23,73 +23,75 @@
     <div class="row d-flex justify-content-center ">
 
         <form action="" method="post">
-            <div class="col-12 row ">
-                <hr>
-                <div class="col-6 row " style="border-right: 1px solid #ced4da;">
-                    <h2>INCIDENT REPORTING FORM</h2>
-                </div>
-                <div class="col-6 row ">
+    
 
-                    <div class="form-group row">
-                        <div class="col-2 d-flex justify-content-end">
-                            <label for="inco" class="col-form-label">Incident No :</label>
-                        </div>
-                        <div class="col-9">
-                            <input type="number" class="form-control" name="inco" required="true">
-                        </div>
-                    </div>
-                    <div class="form-group row  mt-3">
-                        <div class="col-2 d-flex justify-content-end">
-                            <label for="catno" class="form-label">Category No :</label>
-                        </div>
-                        <div class="col-2 mx-3">
-                            <input id="Radio1" type="radio" name="catno" value="I" /><label for="Radio1">&nbspI</label>
-                        </div>
-                        <div class="col-2 ">
-                            <input id="Radio2" type="radio" name="catno" value="II" /><label
-                                for="Radio2">&nbspII</label>
-                        </div>
-                        <div class="col-2 ">
-                            <input id="Radio3" type="radio" name="catno" value="III" /><label
-                                for="Radio3">&nbspIII</label>
-                        </div>
-                        <div class="col-2 ">
-                            <input id="Radio4" type="radio" name="catno" value="IV" /><label
-                                for="Radio4">&nbspIV</label>
-                        </div>
-                    </div>
-                    <div class="form-group row mt-2">
-                        <div class="col-2 d-flex justify-content-end">
-                            <label for="rcname" class="col-form-label">Recieved By :</label>
-                        </div>
-
-                        <div class="col-9">
-                            <input type="text" class="form-control" name="rcname" required="true">
-                        </div>
-                    </div>
-
-                    <div class="form-group row mt-3">
-                        <div class="col-2 d-flex justify-content-end">
-                            <label for="rcname" class="col-form-label">Date :</label>
-                        </div>
-
-                        <div class="col-3">
-                            <input type="date" class="form-control" id="fdate" name="fdate">
-                        </div>
-                        <div class="col-2 d-flex justify-content-end">
-                            <label for="rcname" class="col-form-label ">Time :</label>
-                        </div>
-
-                        <div class="col-3">
-                            <input type="time" id="ftime" name="ftime" class="form-control">
-                        </div>
-                    </div>
-
-                </div>
-            </div>
+    <div class="container ">
+        <div class="col-12 row ">
             <hr>
-    </div>
-    <div class="container">
+            <div class="col-6 row " style="border-right: 1px solid #ced4da;">
+                <h2>INCIDENT REPORTING FORM</h2>
+            </div>
+
+            <div class="mx-2 col-6 row ">
+
+                <div class="form-group row">
+                    <div class="col-2 d-flex justify-content-end">
+                        <label for="inco" class="col-form-label">Incident No :</label>
+                    </div>
+                    <div class="col-9">
+                        <input type="number" class="form-control" name="inco" required="true">
+                    </div>
+                </div>
+                <div class="form-group row  mt-3">
+                    <div class="col-2 d-flex justify-content-end">
+                        <label for="catno" class="form-label">Category No :</label>
+                    </div>
+                    <div class="col-2 mx-3">
+                        <input id="Radio1" type="radio" name="catno" value="I" /><label for="Radio1">&nbspI</label>
+                    </div>
+                    <div class="col-2 ">
+                        <input id="Radio2" type="radio" name="catno" value="II" /><label
+                            for="Radio2">&nbspII</label>
+                    </div>
+                    <div class="col-2 ">
+                        <input id="Radio3" type="radio" name="catno" value="III" /><label
+                            for="Radio3">&nbspIII</label>
+                    </div>
+                    <div class="col-2 ">
+                        <input id="Radio4" type="radio" name="catno" value="IV" /><label
+                            for="Radio4">&nbspIV</label>
+                    </div>
+                </div>
+                <div class="form-group row mt-2">
+                    <div class="col-2 d-flex justify-content-end">
+                        <label for="rcname" class="col-form-label">Recieved By :</label>
+                    </div>
+
+                    <div class="col-9">
+                        <input type="text" class="form-control" name="rcname" required="true">
+                    </div>
+                </div>
+
+                <div class="form-group row mt-3">
+                    <div class="col-2 d-flex justify-content-end">
+                        <label for="rcname" class="col-form-label">Date :</label>
+                    </div>
+
+                    <div class="col-3">
+                        <input type="date" class="form-control" id="fdate" name="fdate">
+                    </div>
+                    <div class="col-2 d-flex justify-content-end">
+                        <label for="rcname" class="col-form-label ">Time :</label>
+                    </div>
+
+                    <div class="col-3">
+                        <input type="time" id="ftime" name="ftime" class="form-control">
+                    </div>
+                </div>
+
+            </div>
+        </div>
+        <hr>
         <div class="form-group row mt-2  d-flex justify-content-center">
             <div class="col ">
                 <input id="inpatient" type="radio" name="type" value="inpatient" />
@@ -113,10 +115,6 @@
                 <label for="equip" class="form-label">&nbsp EQUIPMENT/PROPERTY</label>
             </div>
         </div>
-
-    </div>
-
-    <div class="container ">
         <div class="form-group row mt-2 ">
             <div class="col ">
 
@@ -234,9 +232,15 @@
             </div>
             <div class="col-4  ">
                 <input id="incbox" name="incbox" required="true" style="display: none" class="form-control" placeholder="Please mention any other issues here">
-
             </div>
 
+        </div>
+        <hr style="border-top: dotted 2px;" />
+
+        <div class="form-group row mt-3 ">
+            <div class="col-12  d-grid gap-2">
+                <input type="submit" class="btn btn-dark " value="Submit" />
+             </div>
         </div>
         
 
@@ -244,8 +248,6 @@
     </div>
 
 
-
-    <div><input type="submit" value="Submit" /></div>
     </form>
 
     </div>
