page 2 + some change in 1

--- a/incident form.html
+++ b/incident form.html
@@ -84,7 +84,7 @@
 				<option value="si">Safety Issue</option>
 				<option value="o">Other</option>
 			</select>
-			<input type="text" id="incbox" name="incbox" required="true" style="display: none"; >
+			<input type="text" id="incbox" name="incbox" required="true" style="display: none">
 		</div>
 		<div>
 			<p><label for="incr">Incident Report in detail :</label></p>
@@ -103,12 +103,12 @@
 			<input type="radio" name="yes_no_radio2" id="no2"><label for="no2">No</label></p>
 		</div>
 		<div>
-			<p><label for="inj">Details of any injuries :</label></p>
-			<textarea name="inj" id="" cols="50" rows="2"></textarea>
+			<p><label for="inj">Details of any injuries :</label>
+			<textarea name="inj" id="" cols="50" rows="2"></textarea></p>
 		</div>
 		<div>
-			<p><label for="cra">Corrective action taken & Outcome of action taken  :</label></p>
-			<textarea name="cra" id="" cols="50" rows="2"></textarea>
+			<p><label for="cra">Corrective action taken & Outcome of action taken  :</label>
+			<textarea name="cra" id="" cols="50" rows="2"></textarea></p>
 		</div>
 		<div>
 			<label for="rpname">Reported by Name: </label>
