--- a/increpogbmodified.html
+++ b/increpogbmodified.html
@@ -47,13 +47,13 @@
 
                     <div class="row text-center col-12">
                     <div class="col-4">
-                        <i class='bx bx-globe' style="position:relative;top:3px;font-size: larger;"></i><a href="https://www.pushpagiri.in/" class="text-dark" style="text-decoration:none;"> www.pushpagiri.in</a>
+                        <i class="bx bx-globe" style="position:relative;top:3px;font-size: larger;"></i><a href="https://www.pushpagiri.in/" class="text-dark" style="text-decoration:none;"> www.pushpagiri.in</a>
                     </div>
                     <div class="col-4">
-                        <i class='bx bx-envelope' style="position:relative;top:3px;font-size: larger;"></i><a href="mailto:care@pushpagiri.in/" class="text-dark" style="text-decoration:none;"> care@pushpagiri.in</a>
+                        <i class="bx bx-envelope" style="position:relative;top:3px;font-size: larger;"></i><a href="mailto:care@pushpagiri.in/" class="text-dark" style="text-decoration:none;">care@pushpagiri.in</a>
                     </div>
                     <div class="col-4">
-                        <i class='bx bx-phone' style="position:relative;top:3px;font-size: larger;"></i><a href="tel:+919447764722" class="text-dark" style="text-decoration:none;"> +91 944 77 647 22</a>
+                        <i class="bx bx-phone" style="position:relative;top:3px;font-size: larger;"></i><a href="tel:+919447764722" class="text-dark" style="text-decoration:none;"> +91 944 77 647 22</a>
                     </div>
                     </div>
                 </div>
@@ -215,15 +215,15 @@
                 <label for="gender" class="form-label">Gender :</label>
             </div>
             <div class="col-2 ">
-                <input id="Radio1" type="radio" name="gender" value="male" /><label
+                <input type="radio" name="gender" value="male" /><label
                     for="Radio1">&nbsp MALE</label>
             </div>
             <div class="col-2 ">
-                <input id="Radio2" type="radio" name="gender" value="female" /><label
+                <input type="radio" name="gender" value="female" /><label
                     for="Radio2">&nbsp FEMALE</label>
             </div>
             <div class="col-2 ">
-                <input id="Radio2" type="radio" name="gender" value="other" /><label
+                <input type="radio" name="gender" value="other" /><label
                     for="Radio2">&nbsp OTHER</label>
             </div>
         </div>
@@ -291,7 +291,7 @@
 
 
         <div class="mt-3">
-			<label for="yes_no_radio" class="form-label">Has immediate safety needs been met?</label>
+			<p><label for="yes_no_radio" class="form-label">Has immediate safety needs been met?</label>
 			<input type="radio"  name="yes_no_radio" id="yes1" checked><label for="yes1">Yes</label>
 			<input type="radio" name="yes_no_radio" id="no1"><label for="no1">No</label></p>
 			<p><label for="yes_no_radio2">Next of kin/guardian notified /patient ?</label>
