--- a/incidenet form 2.html
+++ b/incidenet form 2.html
@@ -7,11 +7,24 @@
         <meta name="description" content="incform2">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="form.css">
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js"
+        integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
+     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     </head>
     <body>
-        <div>
-			<p><label for="probcse">Probable cause of Incident : (To be filled by Immediate Supervisor/Shift In-Charge) </label></p>
-			<textarea name="probcse" id="" cols="50" rows="2"></textarea>
+		<hr style="border-top: dotted 2px;" />
+        <div class="form-label">
+			<p><label for="probcse" class="form-label">Probable cause of Incident : (To be filled by Immediate Supervisor/Shift In-Charge) </label></p>
+			<textarea name="probcse" id="" class="form-label" cols="50" rows="2"></textarea>
 		</div>
 		<div>
 			<label for="name">
